# OSKD

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  config.json  shell.nix
libs/socketio-server/src/: client.rs  ns.rs
public/: app.js  default_config.json  index.html
src/: main.rs
